--- a/twitter/App/Views/index/inscreverse.phtml
+++ b/twitter/App/Views/index/inscreverse.phtml
@@ -16,17 +16,17 @@
         <div class="row">
           <div class="col">
             
-            <form action="" method="post">
+            <form action="/registrar" method="post">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Nome">
+                <input type="text" value="nome" name="nome" class="form-control" placeholder="Nome">
               </div>
               
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="E-mail">
+                <input type="text" value="email" name="email" class="form-control" placeholder="E-mail">
               </div>
 
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Senha">
+                <input type="password" value="senha" name="senha" class="form-control" placeholder="Senha">
               </div>
               
               <div class="mt-4 mb-4">
@@ -35,6 +35,13 @@
                 </small>
               </div>
               <button type="submit" class="btn btn-primary btn-block">Inscrever-se</button>
+
+              <?php if($this->view->erroCadastro){?>
+              
+                <small class="form-text text-danger">*erro ao tentar realizar o cadastro, verifique se os campos foram preenchidos corretamente</small>
+
+              ?>php } ?>
+
             </form>
 
           </div>
