--- a/twitter/App/Views/index/inscreverse.phtml
+++ b/twitter/App/Views/index/inscreverse.phtml
@@ -18,15 +18,15 @@
             
             <form action="/registrar" method="post">
               <div class="form-group">
-                <input type="text" value="nome" name="nome" class="form-control" placeholder="Nome">
+                <input type="text" value="<?= $this->view->usuario['nome'] ?>" name="nome" class="form-control" placeholder="Nome">
               </div>
               
               <div class="form-group">
-                <input type="text" value="email" name="email" class="form-control" placeholder="E-mail">
+                <input type="text" value="<?= $this->view->usuario['email'] ?>" name="email" class="form-control" placeholder="E-mail">
               </div>
 
               <div class="form-group">
-                <input type="password" value="senha" name="senha" class="form-control" placeholder="Senha">
+                <input type="password" value="<?= $this->view->usuario['senha'] ?>" name="senha" class="form-control" placeholder="Senha">
               </div>
               
               <div class="mt-4 mb-4">
@@ -36,12 +36,11 @@
               </div>
               <button type="submit" class="btn btn-primary btn-block">Inscrever-se</button>
 
-              <?php if($this->view->erroCadastro){?>
-              
-                <small class="form-text text-danger">*erro ao tentar realizar o cadastro, verifique se os campos foram preenchidos corretamente</small>
+              <?php if($this->view->erroCadastro) { ?>
 
-              ?>php } ?>
+                <small class="form-text text-danger">*Erro ao tentar realizar o cadastro, verifique se os campos foram preenchidos corretamente.</small>
 
+              <?php } ?>
             </form>
 
           </div>
@@ -51,8 +50,3 @@
     </div>
   </div>
 </div>
-
-
-
-    
-  
