--- a/twitter/public/css/style.css
+++ b/twitter/public/css/style.css
@@ -152,7 +152,8 @@ h2 {
 .tweetBox {
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
-  border-bottom: 1px solid #e6ecf0;
+  border: 1px solid #e6ecf0;
+  background-color: #e8f5fd;
   padding: 25px;
 }
 
@@ -191,8 +192,4 @@ h2 {
 
 .tweet:hover {
   background-color: #f5f8fa;
-}
-
-.form-control{
-    border: none;
 }
