--- a/twitter/App/Views/app/quemSeguir.phtml
+++ b/twitter/App/Views/app/quemSeguir.phtml
@@ -57,7 +57,6 @@
 
 		<div class="col-md-6">
 			
-			
 			<div class="row mb-2">
 				<div class="col">
 					<div class="card">
@@ -74,22 +73,26 @@
 					</div>
 				</div>
 			</div>
-			
 
-			<?php foreach($this->view->usuarios as $indice_arr => $usuarios) {?>
+			<?php foreach($this->view->usuarios as $indice_arr => $usuario) { ?>
 				<div class="row mb-2">
 					<div class="col">
 						<div class="card">
 							<div class="card-body">
 								<div class="row">
 									<div class="col-md-6">
-										<?= $usuarios['nome']?>
+										<?= $usuario['nome'] ?>
 									</div>
 								
 									<div class="col-md-6 d-flex justify-content-end">
 										<div>
-											<a href="#" class="btn btn-success">Seguir</a>
-											<a href="#" class="btn btn-danger">Deixar de seguir</a>
+											<?php if($usuario['seguindo_sn'] == 0) { ?>
+												<a href="/acao?acao=seguir&id_usuario=<?=$usuario['id']?>" class="btn btn-success">Seguir</a>
+											<?php } ?>
+
+											<?php if($usuario['seguindo_sn'] == 1) { ?>
+												<a href="/acao?acao=deixar_de_seguir&id_usuario=<?=$usuario['id']?>" class="btn btn-danger">Deixar de seguir</a>
+											<?php } ?>
 										</div>
 									</div>
 								</div>
