--- a/twitter/App/Views/app/timeline.phtml
+++ b/twitter/App/Views/app/timeline.phtml
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg menu">
 	<div class="container">
-		<div class="navbar-nav">
-			<a class="menuItem" href="/timeline">
-				Home
-			</a>
+	  <div class="navbar-nav">
+	  	<a class="menuItem" href="/timeline">
+	  		Home
+	  	</a>
 
-			<a class="menuItem" href="/sair">
-				Sair
-			</a>
+	  	<a class="menuItem" href="/sair">
+	  		Sair
+	  	</a>
 			<img src="/img/twitter_logo.png" class="menuIco" />
-		</div>
+	  </div>
 	</div>
 </nav>
 
 <div class="container mt-5">
 	<div class="row pt-2">
-
+		
 		<div class="col-md-3">
 
 			<div class="perfil">
@@ -24,7 +24,7 @@
 				</div>
 
 				<div class="perfilPainel">
-
+					
 					<div class="row mt-2 mb-2">
 						<div class="col mb-2">
 							<span class="perfilPainelNome">Nome do Usuário</span>
@@ -59,8 +59,8 @@
 			<div class="row mb-2">
 				<div class="col tweetBox">
 					<form method="post" action="/tweet">
-						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="O que está acontecendo?" name="tweet"	></textarea>
-
+						<textarea class="form-control" name="tweet" id="exampleFormControlTextarea1" rows="3"></textarea>
+						
 						<div class="col mt-2 d-flex justify-content-end">
 							<button type="submit" class="btn btn-primary">Tweet</button>
 						</div>
@@ -69,12 +69,11 @@
 				</div>
 			</div>
 
-			<?php foreach($this->view->tweets as $id_tweet => $tweet) {?>
+			<?php foreach($this->view->tweets as $id_tweet => $tweet) { ?>
 				<div class="row tweet">
 					<div class="col">
-						<p><strong><?=$tweet['nome']?></strong> <small><span class="text text-muted">- <?=$tweet['data']?></span></p></small>
+						<p><strong><?=$tweet['nome']?></strong> <small><span class="text text-muted">- <?=$tweet['data']?></span></small></p>
 						<p><?=$tweet['tweet']?></p>
-
 						<br />
 						<form>
 							<div class="col d-flex justify-content-end">
@@ -83,9 +82,7 @@
 						</form>
 					</div>
 				</div>
-
-			<?php } ?>
-			
+		<?php } ?>
 
 
 		</div>
