--- a/twitter/App/Views/layout.phtml
+++ b/twitter/App/Views/layout.phtml
@@ -15,6 +15,7 @@
 
 		<link rel="stylesheet" href="/css/style.css" />
 
+		<link rel="icon" type="imagem/png" href="/twitter/public/img/twitter-logo-4.png">
 	</head>
 
 	<body>
