--- a/twitter/App/Views/app/timeline.phtml
+++ b/twitter/App/Views/app/timeline.phtml
@@ -120,7 +120,7 @@
 							</li>
 						<?php } ?>
 						<li class="page-item">
-							<a class="page-link" href="$this->view->total_de_paginas" aria-label="Next">
+							<a class="page-link" href="?pagina=<?=$this->view->total_de_paginas?>" aria-label="Next">
 								<span aria-hidden="true">&raquo;</span>
 								<span class="sr-only">Ultima</span>
 							</a>
