--- a/twitter/public/css/style.css
+++ b/twitter/public/css/style.css
@@ -226,3 +226,11 @@ body.active {
 .container {
   background: #fff;
 }
+
+/* input[type='file']{
+  display: none;
+} */
+
+.upload{
+  color: #000;
+}
