--- a/twitter/App/Views/index/inscreverse.phtml
+++ b/twitter/App/Views/index/inscreverse.phtml
@@ -28,9 +28,9 @@
               <div class="form-group">
                 <input type="password" value="<?= $this->view->usuario['senha'] ?>" name="senha" class="form-control" placeholder="Senha">
               </div>
-              <form action="" method="POST" enctype="multipart/form-data">
+              <!-- <form action="" method="POST" enctype="multipart/form-data">
                 Arquivo: <input class="upload" type="file" require name="arquivo">
-              </form>
+              </form> -->
               <div class="mt-4 mb-4">
                 <small class="form-text">
                   Ao inscrever-se, você concorda com os Termos de Serviço e com as Políticas de Privacidade, incluindo o Uso de Cookies. Outras pessoas poderão encontrar você pelo e-mail ou número de telefone fornecido · Opções de Privacidade
