--- a/twitter/App/Views/index/inscreverse.phtml
+++ b/twitter/App/Views/index/inscreverse.phtml
@@ -29,7 +29,7 @@
                 <input type="password" value="<?= $this->view->usuario['senha'] ?>" name="senha" class="form-control" placeholder="Senha">
               </div>
               <!-- <form action="" method="POST" enctype="multipart/form-data">
-                Arquivo: <input class="upload" type="file" require name="arquivo">
+                Arquivo: <input class="upload" type="file" require name="arquivo" name="file">
               </form> -->
               <div class="mt-4 mb-4">
                 <small class="form-text">
